[metadata]
name = manga_searcher
version = 0.0.1
author = Santeri Hetekivi
author_email = development@hetekivi.com
description = Finding new manga to read.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SanteriHetekivi/manga_searcher
project_urls =
    Bug Tracker = https://github.com/SanteriHetekivi/manga_searcher/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    # Command line argument parser.
    argparse==1.4.0
    # Wrapper for MangaDex API.
    mangadex==2.5.2
    # a library for getting information from mangaupdates.com!
    py-manga==0.2.3
    # Add date support for arguments.
    typedate==1.1.1
    # Download MyAnimeList lists.
    myanimelist-downloader==0.0.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    manga_searcher = manga_searcher.command_line:main